--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.7",
     "@vueuse/nuxt": "^13.2.0",
+    "geolib": "^3.3.4",
     "nuxt": "^3.17.2",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.7",
